add group learning ppt--Dalin

--- a/Groupwiki_Slides.htm
+++ b/Groupwiki_Slides.htm
@@ -142,6 +142,8 @@
                                 13-Feb-2017: Introduction to Convolutional Neural Network, ShuaiZhang</a></li>
                             <li><a href="http://chopinwong.com/presentations/19Jun2017/" target="_blank">
                                 19-Jun-2017: An Introduction to Tensor Decomposition, Chaoran Huang</a></li>
+                            <li><a href="https://www.slideshare.net/DalinZhang/cnn-structure-from-lenet-to-shufflenet" target="_blank">
+                                17-Jul-2017: CNN structure: from LeNet to ShuffleNet, Dalin Zhang</a></li>
                         </ul>
                     </div>
                     <div class="post-summary-footer">
