--- a/Publication.htm
+++ b/Publication.htm
@@ -128,17 +128,27 @@
 
         <h3 class="title-bg" id="conference"> Conference</h3>
         <!--Testimonials-->
-        <div class="span6">
-								<p class="quote-text side"><a href="https://arxiv.org/pdf/1704.00551.pdf">AutoSVD++: An Efficient Hybrid Collaborative Filtering Model via Contractive Auto-encoders.</a><cite> <b>Shuai Zhang, Lina Yao</b> and Xiwei Xu, The 40th Annual ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR 2017). Tokyo, Japan, August 7 - 11, 2017.</cite></p> 
-				</div>
+            <div class="span6">
+            <p class="quote-text side">Hybrid Collaborative Recommendation via Semi-AutoEncoder.<cite>Shuai Zhang, Lina Yao. The 24th International Conference On Neural Information Processing ICONIP 2017. November 14-18, 2017, Guangzhou, China.</cite></p>
+        </div>
 
         <div class="span6">
-								<p class="quote-text side"><a href="https://www.cse.unsw.edu.au/~chaoranh/papers/ICWS2017_ExpertService_May22_Chaoran.pdf">Software Expert Recommendation via Knowledge Domain Embeddings in Stack Overflow.</a><cite> <b>Chaoran Huang, Lina Yao,</b> Xianzhi Wang, Boualem Benatallah and Quan Z. Sheng, The 24th IEEE International Conference on Web Services (ICWS 2017). Honolulu, Hawaii, USA, June 25 - June 30, 2017.</cite></p>
+            <p class="quote-text side">Intent Recognition in Smart Living Through Deep Recurrent Neural Networks<cite>Xiang Zhang, Lina Yao. The 24th International Conference On Neural Information Processing ICONIP 2017. November 14-18, 2017, Guangzhou, China.</cite></p>
+        </div>
+            
+        <div class="span6">
+            <p class="quote-text side"><a href="https://arxiv.org/pdf/1704.00551.pdf">AutoSVD++: An Efficient Hybrid Collaborative Filtering Model via Contractive Auto-encoders.</a><cite> <b>Shuai Zhang, Lina Yao</b> and Xiwei Xu, The 40th Annual ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR 2017). Tokyo, Japan, August 7 - 11, 2017.</cite></p>
+        </div>
+
+        <div class="span6">
+            <p class="quote-text side"><a href="https://www.cse.unsw.edu.au/~chaoranh/papers/ICWS2017_ExpertService_May22_Chaoran.pdf">Software Expert Recommendation via Knowledge Domain Embeddings in Stack Overflow.</a><cite> <b>Chaoran Huang, Lina Yao,</b> Xianzhi Wang, Boualem Benatallah and Quan Z. Sheng, The 24th IEEE International Conference on Web Services (ICWS 2017). Honolulu, Hawaii, USA, June 25 - June 30, 2017.</cite></p>
         </div>
 
         <div class="span6">
             <p class="quote-text side">Multi-Level Privacy-Preserving Access Control as a Service for Ambient Assisted Living.<cite>Usama Salama, Lina Yao, Xianzhi Wang, Helen Paik and Amin Beheshti. The 24th IEEE International Conference on Web Services (ICWS 2017).Honolulu, Hawaii, USA, June 25 - June 30, 2017.</cite></p>
         </div>
+
+
 
         </div> 
 
