--- a/Publication.htm
+++ b/Publication.htm
@@ -129,13 +129,13 @@
         <h3 class="title-bg" id="conference"> Conference</h3>
         <!--Testimonials-->
             <div class="span6">
-            <p class="quote-text side">Hybrid Collaborative Recommendation via Semi-AutoEncoder.<cite>Shuai Zhang, Lina Yao. The 24th International Conference On Neural Information Processing ICONIP 2017. November 14-18, 2017, Guangzhou, China.</cite></p>
+            <p class="quote-text side">Hybrid Collaborative Recommendation via Semi-AutoEncoder.<cite>Shuai Zhang, Lina Yao,  Xiwei Xu, Sen Wang and Liming Zhu. The 24th International Conference On Neural Information Processing (ICONIP 2017). November 14-18, 2017, Guangzhou, China.</cite></p>
         </div>
 
         <div class="span6">
-            <p class="quote-text side">Intent Recognition in Smart Living Through Deep Recurrent Neural Networks<cite>Xiang Zhang, Lina Yao. The 24th International Conference On Neural Information Processing ICONIP 2017. November 14-18, 2017, Guangzhou, China.</cite></p>
+            <p class="quote-text side">Intent Recognition in Smart Living Through Deep Recurrent Neural Networks<cite>Xiang Zhang, Lina Yao, Chaoran Huang, QuanZheng Sheng and Xianzhi Wang. The 24th International Conference On Neural Information Processing (ICONIP 2017). November 14-18, 2017, Guangzhou, China.</cite></p>
         </div>
-            
+
         <div class="span6">
             <p class="quote-text side"><a href="https://arxiv.org/pdf/1704.00551.pdf">AutoSVD++: An Efficient Hybrid Collaborative Filtering Model via Contractive Auto-encoders.</a><cite> <b>Shuai Zhang, Lina Yao</b> and Xiwei Xu, The 40th Annual ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR 2017). Tokyo, Japan, August 7 - 11, 2017.</cite></p>
         </div>
