--- a/Calendar.htm
+++ b/Calendar.htm
@@ -139,7 +139,8 @@ cursor: default;
                     <th>Rank</th> 
                     <th>Deadline</th> 
                     <th>Time & Place</th> 
-                    <th>Full name of the Conference</th> 
+                    <th>Full name of the Conference</th>
+                    <th>Date for notification</th>
                 </tr> 
             </thead> 
             <tbody> 
@@ -149,6 +150,7 @@ cursor: default;
                     <td>2017/02/17</td> 
                     <td><a href="http://www.kdd.org/kdd2017/">Aug. 13-17, 2017, Halifax, Nova Scotia, Canada</a></td> 
                     <td>International Conference on Knowledge Discovery and Data Mining</td>
+                    <td></td>
                 </tr> 
                 <tr> 
                     <td>Ubicomp</td> 
@@ -156,13 +158,15 @@ cursor: default;
                     <td>2017/04/15</td> 
                     <td><a href="http://ubicomp.org/ubicomp2017/">Sept. 11-15, 2017, Maui, Hawaii</a></td> 
                     <td>International Joint Conference on Pervasive and Ubiquitous Computing</td>
+                    <td></td>
                 </tr> 
                 <tr> 
                     <td>SIGIR</td> 
                     <td>A*</td> 
-                    <td>2017/01/17</td> 
-                    <td><a href="http://sigir.org/sigir2017/">Aug. 7-11, 2017, Tokyo, Japan</a></td> 
+                    <td>2018/01/29(full),2018/02/19(short)</td> 
+                    <td><a href="http://sigir.org/sigir2018/">July 8-12, 2018, Ann Arbor Michigan, U.S.A. </a></td> 
                     <td>International Conference on Research and Development in Information Retrieval</td>
+                    <td>2018/04/11</td>
                 </tr> 
                 <tr> 
                     <td>CIKM </td> 
@@ -170,6 +174,7 @@ cursor: default;
                     <td>2017/05/16</td> 
                     <td><a href="http://cikm2017.org/">Nov. 6-10, 2017, Singapore</a></td> 
                     <td>International Conference on Information and Knowledge Management</td>
+                    <td></td>
                 </tr>
                 <tr> 
                     <td>RecSys</td> 
@@ -177,6 +182,7 @@ cursor: default;
                     <td>2017/04/03</td> 
                     <td><a href="https://recsys.acm.org/recsys17/">Aug. 27-31, 2017, Como, Italy</a></td> 
                     <td>International Conference on Recommender Systems</td>
+                    <td></td>
                 </tr>
                 <tr> 
                     <td>ICDM</td> 
@@ -184,6 +190,7 @@ cursor: default;
                     <td>2017/06/05</td> 
                     <td><a href="http://icdm2017.bigke.org/">Nov. 18-21, 2017, New Orleans, USA</a></td> 
                     <td>International Conference on Data Mining</td>
+                    <td></td>
                 </tr>
                 <tr> 
                     <td>WSDM</td> 
@@ -191,6 +198,7 @@ cursor: default;
                     <td>2017/08/11</td> 
                     <td><a href="http://www.wsdm-conference.org/2018/v">2018, Los Angeles, California, USA</a></td> 
                     <td>International Conference on Web Search and Data Mining</td>
+                    <td></td>
                 </tr> 
                 <tr> 
                     <td>WISE</td> 
@@ -198,6 +206,7 @@ cursor: default;
                     <td>2017/04/09</td> 
                     <td><a href="http://www.wise-conferences.org/">Oct. 7-11, 2017, Puschino, Moscow Region, Russia</a></td> 
                     <td>International Conference on Web Information Systems Engineering</td>
+                    <td></td>
                 </tr> 
                 <tr> 
                     <td>ECML</td> 
@@ -205,6 +214,7 @@ cursor: default;
                     <td>2017/04/13</td> 
                     <td><a href="http://ecmlpkdd2017.ijs.si/">Sept. 18-22, 2017, Skopje, Macedonia</a></td> 
                     <td>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Database</td>
+                    <td></td>
                 </tr>
                 <tr> 
                     <td>ICML</td> 
@@ -212,13 +222,15 @@ cursor: default;
                     <td>2017/02/24</td> 
                     <td><a href="https://2017.icml.cc/">Aug. 6-11, 2017, International Convention Centre, Sydney, Australia</a></td> 
                     <td>International Conference on Machine Learning</td>
+                    <td></td>
                 </tr> 
                 <tr> 
                     <td>SDM</td> 
                     <td>A</td> 
-                    <td>2017/10</td> 
-                    <td><a href="http://www.siam.org/meetings/sdm17/">sdm2018</a></td> 
+                    <td>TBD</td> 
+                    <td><a href="http://www.siam.org/meetings/sdm17/">TBD</a></td> 
                     <td>SIAM International Conference on Data Mining</td>
+                    <td></td>
                 </tr> 
                 <tr> 
                     <td>SIGGRAPH</td> 
@@ -226,6 +238,7 @@ cursor: default;
                     <td>2017/02/14</td> 
                     <td><a href="http://s2017.siggraph.org/">Jul. 30- Aug. 3, 2017, Los Angeles, USA</a></td> 
                     <td>SIG International Conference on Computer Graphics and Interactive Techniques</td>
+                    <td></td>
                 </tr>
                 <tr> 
                     <td>IJCAI</td> 
@@ -233,6 +246,7 @@ cursor: default;
                     <td>2017/02/19</td> 
                     <td><a href="http://ijcai-17.org/">Aug. 19-25, 2017, Melbourne, Australia</a></td> 
                     <td>International Joint Conference on Artificial Intelligence</td>
+                    <td></td>
                 </tr>
                 <tr> 
                     <td>NIPS</td> 
@@ -240,6 +254,7 @@ cursor: default;
                     <td>2017/05/19</td> 
                     <td><a href="https://nips.cc/Conferences/2017">Dec. 4-9, 2017, Long Beach Convention Center, Long Beach</a></td> 
                     <td>Advances in Neural Information Processing Systems</td>
+                    <td></td>
                 </tr> 
                 <tr> 
                     <td>WWW</td> 
@@ -247,13 +262,15 @@ cursor: default;
                     <td>2017/10/27</td> 
                     <td><a href="https://www2018.thewebconf.org/">Apr. 23-27, 2018, Lyon, France</a></td> 
                     <td>International World Wide Web Conference</td>
+                    <td></td>
                 </tr> 
                 <tr> 
                     <td>AAAI</td> 
                     <td>A*</td> 
-                    <td>2017/09</td> 
+                    <td>2017/09/11</td> 
                     <td><a href="http://www.aaai.org/Conferences/AAAI/aaai18.php">Feb. 4-10, 2018, New Orleans, Lousiana, USA</a></td> 
                     <td>National Conference of the American Association for Artificial Intelligence</td>
+                    <td>2017/11/09</td>
                 </tr>
                 <tr>
                     <td>ICONIP</td>
@@ -261,13 +278,15 @@ cursor: default;
                     <td>2017/07/15 </td>
                     <td><a href="http://www.iconip2017.org/papers.html">Nov. 14-18, 2017, Guangzhou, China</a></td>
                     <td>International Conference on Neural Information Processing</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>ICWS </td>
                     <td>A</td>
-                    <td>2017/02/06</td>
-                    <td><a href="http://www.icws.org/2017/about.html">Jun. 25-30, 2017, Honolulu, Hawaii, USA</a></td>
+                    <td>TBD</td>
+                    <td><a href="">July 1-6, 2018, San Francisco, USA</a></td>
                     <td>IEEE International Conference on Web Services</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>ICSOC </td>
@@ -275,6 +294,7 @@ cursor: default;
                     <td>2017/06/06</td>
                     <td><a href="http://www.icsoc.spilab.es/">Nov. 13-16, 2017, Malaga, Spain</a></td>
                     <td>International Conference on Service Oriented Computing</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>CSCW</td>
@@ -282,20 +302,23 @@ cursor: default;
                     <td>2017/04/27 </td>
                     <td><a href="https://cscw.acm.org/2018/index.html">Oct/Nov. 2018</a></td>
                     <td>ACM Conference on Computer Supported Cooperative Work</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>PAKDD</td>
                     <td>A </td>
-                    <td>2017/10</td>
-                    <td><a href="">TBD</a></td>
+                    <td>2017/10/31</td>
+                    <td><a href="http://prada-research.net/pakdd18/">MAY 15-18 2018, MELBOURNE, AUSTRALIA</a></td>
                     <td>Pacific-Asia Conference on Knowledge Discovery and Data Mining</td>
+                    <td>2018/01/28</td>
                 </tr>
                 <tr>
-                    <td>ICIS  </td>
+                    <td>ICIS</td>
                     <td>A*</td>
                     <td>2017/05/05</td>
                     <td><a href="https://icis2017.aisnet.org/">Dec. 10-13, 2017, Seoul, South Korea</a></td>
                     <td>International Conference on Information Systems</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>ECAI</td>
@@ -303,6 +326,7 @@ cursor: default;
                     <td>2018/02</td>
                     <td><a href="https://www.eurai.org/activities/ECAI_conferences">Jul. 13-19, 2018, Stockholm</a></td>
                     <td>European Conference on Artificial Intelligence</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>IJCNN </td>
@@ -310,6 +334,7 @@ cursor: default;
                     <td> 2018/01/15</td>
                     <td><a href="http://www.ecomp.poli.br/~wcci2018/">Jul. 8-13, 2018, Rio de Janeiro, Brazil Acre, Brazil</a></td>
                     <td>IEEE International Joint Conference on Neural Networks</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>AIM</td>
@@ -317,6 +342,7 @@ cursor: default;
                     <td>2018/02/11</td>
                     <td><a href="http://www.ieee-ras.org/component/rseventspro/event/1133-aim-2018-2018-ieee-asme-international-conference-on-advanced-intelligent-mechatronics">Jul. 24-27, 2018, Auckland, New Zealand</a></td>
                     <td>Artificial Intelligence in Medicine</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>IDA</td>
@@ -324,6 +350,7 @@ cursor: default;
                     <td>2017/05/19</td>
                     <td><a href="http://www.dcs.bbk.ac.uk/ida2017/">Oct. 26-28, 2017, London, UK</a></td>
                     <td>Intelligent Data Analysis</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>AMCIS</td>
@@ -331,6 +358,7 @@ cursor: default;
                     <td>2018/02</td>
                     <td><a href="http://amcis2018.aisnet.org/">Aug. 16-18, 2018, New Orleans, LA, USA</a></td>
                     <td>Americas Conference on Information Systems</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>OCIS</td>
@@ -338,6 +366,7 @@ cursor: default;
                     <td>2017/05/10</td>
                     <td><a href="http://www.ocis.org.au/">Jul. 21-26, 2018, Brisbane, Australia </a></td>
                     <td>AoM Organizational Communication and Information Systems</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>ECIS</td>
@@ -345,6 +374,7 @@ cursor: default;
                     <td>2017/11/16</td>
                     <td><a href="http://www.ecis2018.eu/">Jun. 23-28, 2018, Portsmouth, UK</a></td>
                     <td>European Conference on Information Systems</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>CaiSE</td>
@@ -352,6 +382,7 @@ cursor: default;
                     <td>2017/11</td>
                     <td><a href="">Jun. 2018</a></td>
                     <td>International Conference on Advanced Information Systems Engineering</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>CoopIS</td>
@@ -359,6 +390,7 @@ cursor: default;
                     <td>TBD</td>
                     <td><a href="">TBD</a></td>
                     <td>International Conference on Cooperative Information Systems</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>PACIS</td>
@@ -366,6 +398,7 @@ cursor: default;
                     <td>2018/03</td>
                     <td><a href="https://pacis2018.jp/">Jun. 26-30, 2018, Yokohama, Japan </a></td>
                     <td>Pacific Asia Conference on Information Systems</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>ISD</td>
@@ -373,6 +406,7 @@ cursor: default;
                     <td>2017/04/15</td>
                     <td><a href="http://easyconferences.eu/portfolio/isd-2017/">Sept. 6-8, 2017, Pyla, Larnaca, Cyprus</a></td>
                     <td>International Conference on Information Systems Development</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>ICDE</td>
@@ -380,6 +414,7 @@ cursor: default;
                     <td>2017/12/29</td>
                     <td><a href="https://icde2018.org/">Apr. 16-20, 2018, Paris, France</a></td>
                     <td>International Conference on Data Engineering</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>UAI</td>
@@ -387,6 +422,7 @@ cursor: default;
                     <td>2017/03/01</td>
                     <td><a href="http://auai.org/uai2017/index.php">Aug. 11-15, 2017, Sydney, Australia</a></td>
                     <td>Conference in Uncertainty in Artificial Intelligence</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>ICDAR</td>
@@ -394,6 +430,7 @@ cursor: default;
                     <td>2017/04/01</td>
                     <td><a href="http://u-pat.org/ICDAR2017/index.html">Nov. 9-15, 2017, Kyoto, Japan</a></td>
                     <td>IEEE International Conference on Document Analysis and Recognition</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>ICPR</td>
@@ -401,13 +438,15 @@ cursor: default;
                     <td>2018/01/05</td>
                     <td><a href="http://www.icpr2018.org/">Aug. 20-24, 2018, Bejing, China</a></td>
                     <td>International Conference on Pattern Recognition</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>AISTATS</td>
                     <td>A </td>
-                    <td>2017/10</td>
-                    <td><a href="">TBD</a></td>
+                    <td>2017/10/13</td>
+                    <td><a href="http://www.aistats.org/">Apr. 9-11, 2018, Playa Blanca, Lanzarote</a></td>
                     <td>International Conference on Artificial Intelligence and Statistics</td>
+                    <td>2017/12/22</td>
                 </tr>
                 <tr>
                     <td>ICLR </td>
@@ -415,6 +454,7 @@ cursor: default;
                     <td>TBD</td>
                     <td><a href="">TBD</a></td>
                     <td>International Conference on Learning Representations</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>IUI</td>
@@ -422,6 +462,7 @@ cursor: default;
                     <td>2017/10/08</td>
                     <td><a href="http://iui.acm.org/2018/">Mar. 7-11, 2018, Tokyo, Japan</a></td>
                     <td>International Conference on Intelligent User Interfaces</td>
+                    <td></td>
                 </tr>
             </tbody>
             </table>  
