Change for the publications

--- a/Publication.htm
+++ b/Publication.htm
@@ -128,7 +128,11 @@
 
         <h3 class="title-bg" id="conference"> Conference</h3>
         <!--Testimonials-->
-            <div class="span6">
+        <div class="span6">
+            <p class="quote-text side">Multi-Person Brain Activity Recognition via Comprehensive EEG Signal Analysis.<cite>Xiang Zhang, Lina Yao, Dalin Zhang, Xianzhi Wang, Quan Z. Sheng and Tao Gu.  The 14th International Conference on Mobile and Ubiquitous Systems: Computing, Networking and Services (Mobiquitous 2017). Melbourne, Australia Nov 7 - 10, 2017 </cite></p>
+        </div>
+
+        <div class="span6">
             <p class="quote-text side">Hybrid Collaborative Recommendation via Semi-AutoEncoder.<cite>Shuai Zhang, Lina Yao,  Xiwei Xu, Sen Wang and Liming Zhu. The 24th International Conference On Neural Information Processing (ICONIP 2017). November 14-18, 2017, Guangzhou, China.</cite></p>
         </div>
 
