--- a/opensource/faultpredition/index.html
+++ b/opensource/faultpredition/index.html
@@ -2,11 +2,20 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Title of the document</title>
+<title>Fault Prediction Project Resources</title>
 </head>
 
 <body>
-Content of the document......
+
+<div>
+<p>Source Code on Github</p>
+<a href="https://github.com/qiguangyang/Faultpredition">Source Code</a>
+</div>
+
+<div>
+<p>Video Demo</p>
+<a href="https://youtu.be/tmlKEhH1xDk">Video</a>
+</div>
 </body>
 
 </html>
