--- a/Calendar.htm
+++ b/Calendar.htm
@@ -228,7 +228,7 @@ cursor: default;
                     <td>SDM</td> 
                     <td>A</td> 
                     <td>2017/10/06, 2017/10/13</td> 
-                    <td><a href="http://www.siam.org/meetings/sdm18/"></a>San Diego, Califonia, USA</td> 
+                    <td><a href="http://www.siam.org/meetings/sdm18/">San Diego, Califonia, USA</a></td> 
                     <td>SIAM International Conference on Data Mining</td>
                     <td></td>
                 </tr> 
