--- a/Calendar.htm
+++ b/Calendar.htm
@@ -506,7 +506,7 @@ cursor: default;
                 <li>Venue: K17, 401K</li>
             </ul>
 
-            <p>Order: Xiang Zhang; Chaoran Huang; Guangyang Qi; Shuai Zhang; Xiaodong Ning; Manqing Dong; Xigang Yuan; Kaixuan Chen; Dalin Zhang</p>
+            <p>Order: Xiang Zhang; Chaoran Huang; Shuai Zhang; Xiaodong Ning; Manqing Dong; Xigang Yuan; Kaixuan Chen; Dalin Zhang</p>
 
             <p>Slides of former reading and learning group, please visit: <a href="Groupwiki_Slides.htm">Slides</a></p>
 
