Chaoran: add pete warden's blog in terms of tensorflow
Signed-off-by: Chaoran Huang <chaoran.huang@unsw.edu.au>

--- a/Groupwiki_GPU.htm
+++ b/Groupwiki_GPU.htm
@@ -339,6 +339,7 @@ session = tf.Session(config=config, ...)
                         <a href="https://www.tensorflow.org/tutorials/using_gpu#allowing_gpu_memory_growth" target="_blank">
                             here
                         </a>.
+                        You may also find <a href="https://petewarden.com/" target="_blank">Pete Warden's blog</a> interesting.
                         </p>
 
                         <b id="userPip">Installing Python Packages in User's Home Directory with pip</b>
