Chaoran: update example of pip
Signed-off-by: Chaoran Huang <chaoran.huang@unsw.edu.au>

--- a/Groupwiki_GPU.htm
+++ b/Groupwiki_GPU.htm
@@ -348,8 +348,8 @@ session = tf.Session(config=config, ...)
                             are encouraged to send to administrators or me Chaoran myself, it is also very handy at many times,
                             to install packages under users' home themselves, which requires no privilege permission, and affect
                             nothing on others. <br>
-                            This can be done easily by adding a <b>`--user`</b> option to a normal pip command. For example:
-                            <pre>$ pip install --user [PACKAGE_NAME]</pre>
+                            This can be done easily by adding a <b>`--user`</b> option to a normal pip3(pip2) command. For example:
+                            <pre>$ pip3 install --user [PACKAGE_NAME]</pre>
                             where <b>`[PACKAGE_NAME]`</b> is the one you want to install.
                         </p>
 
