--- a/People.htm
+++ b/People.htm
@@ -177,8 +177,8 @@
 
                     <!-- Gallery Item 8 -->
                     <li  class="span3 gallery-item" data-id="id-8" data-type="illustration">
-                        <a href="http://www.cse.unsw.edu.au/~z5103756/" target="_blank"><img src="img/Group websites/dalin.jpg" alt="Gallery" style="width: 150px; height: 150px; object-fit: cover;"></a>
-                        <span class="project-details"><a href="http://www.cse.unsw.edu.au/~z5103756/" target="_blank">Dalin Zhang</a>Ph.D student S1.2017-present</span>
+                        <a href="https://nday0739.github.io/" target="_blank"><img src="img/Group websites/dalin.jpg" alt="Gallery" style="width: 150px; height: 150px; object-fit: cover;"></a>
+                        <span class="project-details"><a href="https://nday0739.github.io/" target="_blank">Dalin Zhang</a>Ph.D student S1.2017-present</span>
                     </li>
 
                     <!-- Gallery Item 9 -->
