link to beta by C.H.

--- a/index.htm
+++ b/index.htm
@@ -79,6 +79,7 @@ $(document).ready(function () {
         <!-- Logo
         ================================================== -->
         <div class="span5 logo">
+					<p>A <a href="/beta/">Beta version</a> of website is now available</p>
         	<a href="index.htm"><img src="img/Group websites/logo.png" style="height: 80px;" alt="" /></a>
             <h5>Inspiration of Data</h5>
         </div>
