--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<meta http-equiv="refresh" content="0; URL='http://insdata.org/beta'" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>InsData</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
