--- a/wiki/GPUSrv.html
+++ b/wiki/GPUSrv.html
@@ -14,7 +14,7 @@
           href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.min.css">
-    <link rel="stylesheet" href="/beta/styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <style>
         #view-source {
             position: fixed;
@@ -382,8 +382,8 @@
 
 <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <script>
-    $("#navbar").load("/beta/navbar.html");
-    $("#footer").load("/beta/footer.html");
+    $("#navbar").load("/navbar.html");
+    $("#footer").load("/footer.html");
 </script>
 </body>
 </html>
