--- a/navbar.html
+++ b/navbar.html
@@ -49,7 +49,7 @@
     <!-- Navigation -->
     <div class="android-navigation-container">
         <nav class="android-navigation mdl-navigation">
-            <a class="mdl-navigation__link" href="/index.html">Home</a>
+            <a class="mdl-navigation__link" href="/_index.html">Home</a>
             <a class="mdl-navigation__link" href="/people.html">People</a>
             <a class="mdl-navigation__link" href="/publications.html">Publications</a>
             <a class="mdl-navigation__link" href="/opensources.html">Demo</a>
