--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
+<html lang="en">
+<head>
 <meta http-equiv="refresh" content="0; URL='http://insdata.org/beta/'" />
+</head>
+<body>
+</body>
+</html>
