--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<html lang="en">
-<head>
-<meta http-equiv="refresh" content="0; URL='http://insdata.org/beta/'" />
-</head>
-<body>
-</body>
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>HTML Meta Tag</title>
+      <meta http-equiv = "refresh" content = "3; url = http://insdata.org/beta/" />
+   </head>
+   <body>
+      <p>Redirecting to another URL</p>
+   </body>
 </html>
