--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
       <meta http-equiv = "refresh" content = "0; url = http://insdata.org/beta/" />
    </head>
    <body>
-      <p>Redirecting to another URL</p>
+      <p>Redirecting to beta</p>
    </body>
 </html>
