--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Meta Tag</title>
+      <title>Loading</title>
       <meta http-equiv = "refresh" content = "0; url = http://insdata.org/beta/" />
    </head>
    <body>
-      <p>Redirecting to beta</p>
+      <p>loading</p>
    </body>
 </html>
